# SQL-on-CSV-CLI

./: .gitignore  Cargo.toml  README.md  count_star_comps.txt  flamegraphInstructions.txt  graph.xlsx  myBenchmarks.sh  select_star_comps.txt
benchmarks/: csvsqlBenchmarks.sh  csvsql_large_tall.sh  csvsql_large_tall_benchmarks.csv  csvsql_large_wide.sh  csvsql_medium_tall.sh  csvsql_medium_tall_benchmarks.csv  csvsql_medium_wide.sh  csvsql_medium_wide_benchmarks.csv  csvsql_small_tall.sh  csvsql_small_tall_benchmarks.csv  csvsql_small_wide.sh  csvsql_small_wide_benchmarks.csv  csvsql_test.sh  csvsql_v1  duckDB_test.sh  duckdb_medium_tall_output.csv  duckdb_medium_wide_output.csv  duckdb_medium_wide_output_5runs.csv  duckdb_small_tall_output.csv  duckdb_small_tall_output_5runs.csv  duckdb_small_wide_output.csv  duckdb_small_wide_output_5runs.csv  large_mycsvsql.sh  mycsvsql.sh  mycsvsqlv1_large_tall_benchmarks.csv  mycsvsqlv1_medium_tall_benchmarks_5runs.csv  mycsvsqlv1_medium_wide_benchmarks.csv  mycsvsqlv1_small_tall_benchmarks.csv  mycsvsqlv1_small_wide_benchmarks_5runs.csv  redo.sh  run_all_scripts.sh
data/: myfile.csv
src/: aggregates.rs  condition_checker.rs  csv_reader.rs  main.rs  parser.rs  query_executor.rs  sql_parser.rs  utils.rs
tests/: csvsql_results.sh  diff_files.sh  mycsvsql_results.sh
