[package]
name = "csvsql_v2_2"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"             # For reading and processing CSV files
sqlparser = "0.12"      # For SQL-like parsing, if you want to leverage an existing parser
clap = { version = "4.0", features = ["derive"] }
regex = "1.6"
memmap2 = "0.5"

[profile.release]
debug = true
opt-level = 3
lto = false
codegen-units = 1