[package]
name = "csvsql_v2_benchmark"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"             # For reading and processing CSV files
sqlparser = "0.12"      # For SQL-like parsing, if you want to leverage an existing parser
clap = { version = "4.0", features = ["derive"] }
regex = "1.6"
memmap2 = "0.5"
memchr = "2.4"

[profile.release.package."*"]
debug = false // true

[profile.release]
debug = false // true
opt-level = 3
lto = true // false
codegen-units = 1
debug-assertions = false // true
strip = "symbols" // false